--- a/ros/ros_ws/src/pi_drive/package.xml
+++ b/ros/ros_ws/src/pi_drive/package.xml
@@ -6,14 +6,22 @@
   <description>
     drive controller package for pi-rosbot.
   </description>
-  <maintainer email="ros@todo.todo">KUDO Shunsuke</maintainer>
+  <maintainer email="kudo.shunsuke.xx@gmail.com">KUDO Shunsuke</maintainer>
   <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <build_depend>rclcpp</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+
   <exec_depend>rclcpp</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+
   <test_depend>rclcpp</test_depend>
+  <test_depend>std_msgs</test_depend>
+  <test_depend>geometry_msgs</test_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
