--- a/ros/ros_ws/src/pi_drive/test/CMakeLists.txt
+++ b/ros/ros_ws/src/pi_drive/test/CMakeLists.txt
@@ -1,20 +1,23 @@
+message("### rclcpp_INCLUDE_DIRS: ${rclcpp_INCLUDE_DIRS}")
+
 include_directories(
   include
   ${rclcpp_INCLUDE_DIRS}
+  ../include
 )
 
 ament_add_gtest(
   test_piDriveController
-  test_piDriveController.cpp
+  ./test_piDriveController_go_straight.cpp
+  #  ./test_piDriveController_go_right.cpp
+  #  ./test_piDriveController_go_left.cpp
+  #  ./test_piDriveController_turn_right.cpp
+  #  ./test_piDriveController_turn_left.cpp
 )
-
-#ament_target_dependencies(
-#  test_piDriveController
-#  ${dependencies}
-#)
-
-target_link_libraries(
-  test_piDriveController
-  ${rclcpp_LIBRARIES}
+ament_target_dependencies(
+    test_piDriveController
+    rclcpp
+    std_msgs
+    geometry_msgs
 )
 
