build piDriveController lib

--- a/ros/ros_ws/src/pi_drive/CMakeLists.txt
+++ b/ros/ros_ws/src/pi_drive/CMakeLists.txt
@@ -8,7 +8,7 @@ project(pi_drive)
 
 # Default to C++17
 if(NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 17)
+  set(CMAKE_CXX_STANDARD 14)
 endif()
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
@@ -18,21 +18,26 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(rclcpp_lifecycle REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 
-if(BUILD_TESTING)
-  #find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # uncomment the line when a copyright and license is not present in all source files
-  #set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # uncomment the line when this package is not in a git repo
-  #set(ament_cmake_cpplint_FOUND TRUE)
-  #ament_lint_auto_find_test_dependencies()
+#ament_auto_find_build_dependencies(REQUIRED ${geometry_msgs_INCLUDE_DIRS})
 
-  find_package(ament_cmake_gtest REQUIRED)
-  add_subdirectory(test)
+include_directories(
+  include
+  ${rclcpp_INCLUDE_DIRS}
+  ${rclcpp_components_INCLUDE_DIRS}
+  ${rclcpp_lifecycle_INCLUDE_DIRS}
+  ${std_msgs_INCLUDE_DIRS}
+  ${geometry_msgs_INCLUDE_DIRS}
+)
+
+add_subdirectory(src)
+
+if(BUILD_TESTING)
+    #add_subdirectory(test)
 endif()
 
 ament_package()
