--- a/ros/ros_ws/src/pi_drive/test/CMakeLists.txt
+++ b/ros/ros_ws/src/pi_drive/test/CMakeLists.txt
@@ -1,10 +1,14 @@
-message("### rclcpp_INCLUDE_DIRS: ${rclcpp_INCLUDE_DIRS}")
+#find_package(ament_lint_auto REQUIRED)
+# the following line skips the linter which checks for copyrights
+# uncomment the line when a copyright and license is not present in all source files
+#set(ament_cmake_copyright_FOUND TRUE)
+# the following line skips cpplint (only works in a git repo)
+# uncomment the line when this package is not in a git repo
+#set(ament_cmake_cpplint_FOUND TRUE)
+#ament_lint_auto_find_test_dependencies()
 
-include_directories(
-  include
-  ${rclcpp_INCLUDE_DIRS}
-  ../include
-)
+find_package(ament_cmake_gtest REQUIRED)
+
 
 ament_add_gtest(
   test_piDriveController
@@ -14,10 +18,19 @@ ament_add_gtest(
   #  ./test_piDriveController_turn_right.cpp
   #  ./test_piDriveController_turn_left.cpp
 )
-ament_target_dependencies(
-    test_piDriveController
-    rclcpp
-    std_msgs
-    geometry_msgs
+
+target_link_libraries(
+  test_piDriveController
+  rclcpp
+  rclcpp_lifecycle
+  std_msgs
+  geometry_msgs
 )
 
+ament_target_dependencies(
+  test_piDriveController
+  rclcpp
+  rclcpp_lifecycle
+  std_msgs
+  geometry_msgs
+)
